--- a/Aufgabe1_Projektidee/Dokumentation.tex
+++ b/Aufgabe1_Projektidee/Dokumentation.tex
@@ -33,20 +33,20 @@
 
 \section*{a) Überblick}
 
-Unser Projekt ist die Gestaltung einer \textit{Kochbuchwebseite}.
+Die Idee für das Projekt ist eine \textit{Kochbuch-Webseite} zu erstellen, die für die im folgenden beschriebene Zielgruppe das Zubereiten von Gerichten erleichtern soll.
 
 \textbf{Inhalt}\\
 Die Seite bietet eine Sammlung von Rezepten aller Art.
 Die Rezepte sind in verschiedene Kategorien eingeordnet und können sortiert und durchsucht werden.
 Nutzer können Rezepte bewerten, hinzufügen, kommentieren und ein eigenes digitales Kochbuch verwalten, in dem sie sich Rezepte speichern.
-Innerhalb der Rezepte gibt es zu ausgewählten Techniken und Angaben Hinweise für unerfahrene Köche. Zum Beispiel kann der Nutzer eine Erklärung dazu erhalten, was eine Prise ist.
+Innerhalb der Rezepte gibt es zu ausgewählten Techniken und Angaben Hinweise für unerfahrene Köche. Der Nutzer kann z.B. eine Erklärung dazu erhalten, was eine Prise Salz ist.
 
 \textbf{Zielgruppe}\\
 Zu der Zielgruppe gehören 16 bis 40 jährige Gelegenheitsköche, die der digitalen Version eines Kochbuchs offen gegenüberstehen.
-Einerseits spricht die Seite unerfahrene Köche an, die sich über Rezepte und bestimmte Techniken informieren wollen. Andererseits ist die Seite geeignet für inspirationssuchende Gelegenheitsköche, die ein Rezept für einen bestimmten Anlass suchen. Erfahrene Köche haben die Möglichkeit, neue Rezepte zu finden, sich Rezepte zu speichern, und schnell auf sie zuzugreifen,
+Einerseits spricht die Seite unerfahrene Köche an, die sich über Rezepte und bestimmte Techniken informieren wollen. Andererseits ist die Seite geeignet für inspirationssuchende Gelegenheitsköche, die ein Rezept für einen bestimmten Anlass suchen. Erfahrene Köche haben die Möglichkeit, neue Rezepte zu finden, diese zu speichern und schnell darauf zuzugreifen. 
 
 \textbf{Ziele} \\
-Die beiden Hauptfunktionen der Webseite sind das effektive Durchsuchen von Rezepten und das Speichern von Rezepten in einem eigenen Kochbuch. Nutzer finden Inspirationen, Kommentare und Erfahrungen anderer Köche, sowie Informationen zu den wichtigsten Kochtechniken.
+Eine der beiden Hauptfunktionen der Webseite ist diese zu nutzen, um sich von den gegebenen Rezepten inspirieren zu lassen. Eine andere Hauptfunktion besteht darin, die Webseite nach bestimmten Rezepten zu durchsuchen. 
 
 % Notizen:
 %Features: \\
@@ -75,11 +75,11 @@ Die beiden Hauptfunktionen der Webseite sind das effektive Durchsuchen von Rezep
  
  %Plätzchen backen, sonst kein Vielkocher $\to$ Suchfunktion oder über Kategoriennavigation \\ 16 jährige Schülerin
  
- \item Karl ist Student und hat Hunger, nicht viele Zutaten in der Küche, aber keine Lust, einkaufen zu gehen. Auf der Webseite gibt er einige Zutaten ein, die ihm zur Verfügung stehen und erhält eine kleine Auswahl von Rezepten.
+ \item Karl ist Student und hat Hunger. Er hat aber nur Nudeln, Hackfleisch und Tomaten zuhause. Auf der Webseite gibt er diese Zutaten ein und erhält eine kleine Auswahl von Rezepten. 
  
  %Kochen nach Zutaten die zur Verfügung stehen - Rezept finden $\to$ verwendet Suchfunktion nach Zutat \\ fauler Student (oder WG)
  
- \item Anna ist 40 und Hausfrau. Sie kocht gerne für ihre Familie und möchte am Sonntag mal ein neues Rezept ausprobieren. Auf der Webseite scrollt sie durch die Bilder und Namen der Rezepte, (schränkt die Suche durch "Mittagessen" ein). Einige Rezepte speichert sie sich in ihrem eigenen Kochbuch um später nocheinmal auf sie zuzugreifen.
+ \item Anna ist 40 und Hausfrau. Sie möchte am Sonntag für ihre Familie ein neues Rezept ausprobieren. Auf der Webseite klappt sie das Seitenmenü ein und scrollt durch die Bilder. Sie öffnet ein Rezept, das ihr gefällt. Danach speichert sie das Rezept ab und betrachtet ihre gespeicherten Rezepte. 
  
  %Inspirationssuchender $\to$ verwendet Merkfunktion \\ Hausfrau ca 40, will neues ausprobieren
 \end{enumerate}
