--- a/Aufgabe2_Navigationsstruktur/Dokumentation.tex
+++ b/Aufgabe2_Navigationsstruktur/Dokumentation.tex
@@ -34,20 +34,25 @@
 
 % ------------------------------------------------------------------------------------
 
-\textbf{Liste von Inhalten}\\
-Rezepte: vegan, vegetarisch, italienisch, ... (länderspezifisch) , Fleischgerichte, Fischgerichte, Plätzchen, Kuchen, Auflauf, Gemüsegerichte, süß, herzhaft, Knabberzeug, Soßen und Dips, Salate, Brot, Teiggerichte, ...
+\textbf{kurze Erklärung:}\\
+Der erste Navigationspunkt unserer Webseite ist Home/Startseite, von der ein Zugriff auf alles weitere möglich ist.
 
-Techniken
+Unsere Webseite soll folgende Inhalte beinhalten:\\
+Verschiedene Rezepte geordnet nach vegan, vegetarisch, Fleisch- und Fischgerichte, Gemüsegerichte und Länderspäzifische Gerichte. \\
+Des Weiteren sind Backrezepte wie Plätzchen, Kuchen, Auflauf, aber auch andere süße oder herzhafte Rezepte zu finden. \\
+Außerdem werden es vermutlich Rezepte für Soßen, Dips, Knabberzeug, Salate und Teiggerichte auf der Webseite zu finden sind. 
 
-Login/persönlicher Bereich: eigene Rezepte
+Deshalb sind die angehenden Stichpunkte auch als Kategorien zu finden. 
 
-Home (Überblick)
+Des Weiteren wird es verschiedene Techniken zur Zubereitung von Gerichten geben. 
+Zudem wird es einen persönlichen Bereich mit einer Login-Funktion geben, in der Rezepte gespeichert und verwaltet werden können.
+
 
 
 \textbf{Inhalte in Oberbegriffen zusammengefasst:} \\
 Home | Kochen | Backen | meine Rezepte
 
-Der Bereich 'Techniken' ist in alle Rezeptunterseiten integriert, also kein eigenständiger Navigationsbereich.
+Der Bereich 'Techniken' ist in alle Rezept-Unterseiten integriert, also kein eigenständiger Navigationsbereich.
 
 \textbf{Schema zur Organisation der Begriffe:}\\
 Hierarchische Struktur
@@ -91,10 +96,8 @@ Hierarchische Struktur
 % lines
 \foreach \value in {1,...,4}
   \draw[-] (c2.195) |- (c2\value.west);
-
 \foreach \value in {1,...,3}
   \draw[-] (c3.195) |- (c3\value.west);
-
 \foreach \value in {1,...,3}
   \draw[-] (c4.195) |- (c4\value.west);
 
