--- a/Aufgabe3_Strukturierung/Dokumentation.tex
+++ b/Aufgabe3_Strukturierung/Dokumentation.tex
@@ -35,11 +35,12 @@
 \includegraphics[scale=0.8]{Entwürfe/Chris/chris1.pdf}
 
 
-Vorteile: \\
+\textbf{Vorteile:} \\
 - einfach und übersichtlich\\
-- Seite nicht überladen
+- Seite nicht überladen\\
+- viel Platz für Inhalt
 
-Nachteile: \\
+\textbf{Nachteile:} \\
 - Menüpunkte Backen/Kochen können unübersichtlich werden bei zu vielen Unterkategorien\\
 - unklar, was Login beinhaltet (welche Funktionen hat man davon?) -> Hinweis auf persönliche Funktionen / Möglichkeiten
 
@@ -48,13 +49,14 @@ Nachteile: \\
 
 \includegraphics[scale=0.8]{Entwürfe/Chris/chris2.pdf}
 
-Vorteile:\\
+\textbf{Vorteile:}\\
 - klassischer Aufbau und daher intuitives Zurechtfinden möglich (Position von Login und Suche) \\
-- übersichtliches Menü, das sich anpasst (kann klein und groß sein, je nach Bedarf)
+- übersichtliches Menü, das sich anpasst (Ein- und Ausklappen möglich).
 -
 
-Nachteile:\\
-- Seitenmenü kann problematisch werden, wenn Menüpunkte zu lang sind.
+\textbf{Nachteile:}\\
+- Seitenmenü kann problematisch werden, wenn Menüpunkte zu lang sind.\\
+- nicht innovativ, da es sehr oft verwendet wird.
 
 
 % ------------------------------------------------------------------------------------
@@ -63,15 +65,15 @@ Nachteile:\\
 \includegraphics[scale=0.8]{Entwürfe/Velat/velat1.pdf}
 
 
-Vorteile:\\
-- es ist ersichtlich, dass es einen eigenen Kochbuchbereich gibt, für den man sich einloggen muss.
-- innovativer Suchbereich
+\textbf{Vorteile:}\\
+- es ist ersichtlich, dass es einen eigenen Kochbuchbereich gibt, für den man sich einloggen muss.\\
+- innovativer Suchbereich\\
 - Suchbereich als eigener Frame jederzeit sichtbar
 
 
-Nachteile:\\
-- Menüpunkte haben zu viele Unterpunkte im Dropdownmenü
-- Suchbereich verbraucht Platz von Inhaltsseite
+\textbf{Nachteile:}\\
+- Menüpunkte haben zu viele Unterpunkte im Dropdownmenü\\
+- Suchbereich verbraucht Platz von Inhaltsseite\\
 - Suchfunktion zu kompliziert
 
 % ------------------------------------------------------------------------------------
@@ -80,68 +82,66 @@ Nachteile:\\
 \includegraphics[scale=0.8]{Entwürfe/Velat/velat2.pdf}
 
 
-Vorteile:\\
-- seitlicher Suchbereich: Kategorien können aus- und eingeklappt werden: übersichtlich
-- mehr Platz für Inhalt da Suchbereich verbergbar ist
+\textbf{Vorteile:}\\
+- seitlicher Suchbereich: Kategorien können aus- und eingeklappt werden: übersichtlich\\
+- mehr Platz für Inhalt, da Suchbereich verborgen werden kann.
 
-Nachteile:\\
-- im Menü sowohl mein Kochbuch als auch Login -> Unterschied?
+\textbf{Nachteile:}\\
+- Im Dropdownmenü ist persönl. Bereich schon enthalten, obwohl noch nicht eingeloggt.
 
-
+\newpage
 % ------------------------------------------------------------------------------------
 \section*{Entwurf 5} % Tamar 1
 
-%\includegraphics[scale=0.4]{Entwürfe/Tamar/entwurf1.1_home.png}
+\includegraphics[scale=2.5]{Entwürfe/Tamar/entwurf1.1_home.png}
 %\includegraphics[scale=0.4]{Entwürfe/Tamar/entwurf1.2_rezeptseite.png}\\
 %\includegraphics[scale=0.4]{Entwürfe/Tamar/entwurf1.3_hinzufügen.png}
 
 
 
-Vorteile: \\
-- klassischer Aufbau
-- Suche jederzeit sichbar
+\textbf{Vorteile:}\\
+- klassischer Aufbau\\
+- Suche jederzeit sichtbar\\
 - übersichtlich
 
-Nachteile:
-- Rezept hinzufügen sollte unter mein Kochbuch kommen, da es sonst nicht in die Navigationsstruktur passt
-- Suchfunktion verbraucht Platz
+\textbf{Nachteile:}\\
+- Rezept hinzufügen sollte unter mein Kochbuch kommen, da es sonst nicht in die Navigationsstruktur passt\\
+- Suchfunktion verbraucht Platz\\
 - auf Rezeptseite muss Rezept mehr Platz einnehmen
-
+\newpage
 % ------------------------------------------------------------------------------------
 \section*{Entwurf 6} % Tamar 2
 
-%\includegraphics[scale=0.4]{Entwürfe/Tamar/entwurf2.1_home.png}
+\includegraphics[scale=2.5]{Entwürfe/Tamar/entwurf2.1_home.png}
 %\includegraphics[scale=0.4]{Entwürfe/Tamar/entwurf2.2_rezeptseite.png}\\
 %\includegraphics[scale=0.4]{Entwürfe/Tamar/entwurf2.3_filtern1.png}
 %\includegraphics[scale=0.4]{Entwürfe/Tamar/entwurf2.3_filtern2.png}
 
 
-Vorteile: \\
-- mehr Platz
+\textbf{Vorteile:} \\
+- mehr Platz\\
 - aufgeräumter
 
-Nachteile:
-- Suche als eigene Seite hat Nachteil, dass man ausgewählte Kategorien nicht nebenher sieht.
+\textbf{Nachteile:}\\
+- Suche als eigene Seite hat Nachteil, dass man ausgewählte Kategorien nicht nebenher sieht.\\
 - Suchseite zu überladen
 
 
-
+\newpage
 % ------------------------------------------------------------------------------------
 \section*{Planung des Prototypen}
 
 \begin{enumerate}
- \item möglichst übersichtliches, klassisches Design um intuitives Zurechtfinden zu ermöglichen (oben rechts Login)
+ \item möglichst übersichtliches, klassisches Design um intuitives Zurechtfinden zu ermöglichen (rechts oben Login)
  \item Navigation aufgespalten:
  \begin{itemize}
-  \item einerseits: horizontale Navigation stellt organisatorische Dinge dar: Metanavigation, wie Home und Profilverwaltung / persönlicher Bereich
-  \item andererseits: Seitenmenü mit der Navigation durch die Rezepte (inhaltlich) \\
-  Seitenmenü enthält Kategorien, nach denen Rezepte sortiert/gefiltert werden können und für "suchdominante" Menschen, und solche, die genau wissen, was sie wollen die Suchleiste
+  \item einerseits: horizontale Navigation stellt organisatorisches dar: Meta-Navigation, wie Home und Profilverwaltung / persönlicher Bereich
+  \item andererseits: Seitenmenü enthält Kategorien, nach denen Rezepte sortiert/gefiltert werden können. Für Nutzer, die genau wissen was sie wollen, gibt es die Suchleiste.
  \end{itemize}
  \item Navigation und Struktur der Webseite ist für den Nutzer ersichtlich, da auf jeder Seite Navigation an gleicher Stelle bleibt und sich eventuell dynamisch anpasst (checkboxen)
- \item Navigation nimmt nicht notwendigerweise zu viel Platz der Webseite ein, da sie eingeklappt/versteckt werden kann
- \item um seitliches Menü übersichtlich zu halten, sind die einzelnen Kategorien eingeklappt und können ausgeklappt werden
- 
- \item hauptsächlicher Inhalt der Hauptseite sind die Bilder der Rezepte
+ \item Navigation nimmt nicht notwendigerweise zu viel Platz der Webseite ein, da sie eingeklappt/verborgen werden kann
+ \item Damit das seitliche Menü ersichtlich bleibt, sind einzelne Kategorien (Kochen, Backen, usw.) eingeklappt. Nach Bedarf können diese ausgeklappt werden, damit Unterkategorien sichtbar sind. 
+ \item Der Großteil des Seiteninhalts besteht aus Bildern von Rezepten und der dazugehörige Kochvorgang.
 
 \end{enumerate}
 
