--- a/Aufgabe4_Prototyp/Dokumentation.tex
+++ b/Aufgabe4_Prototyp/Dokumentation.tex
@@ -46,17 +46,17 @@ Startseite:
 \end{center}
 
 Die Startseite enthält einen kurzen Begrüßungstext mit einer kurzen Erklärung der Navigation und Bilder von verschiedenen Rezepten.\\
-Rechts oben befindet sich der Menüpunkt der zum persönlichen Kochbuch, beziehungsweise zum Login führt.\\
-Auf der rechten Seite ist eine einklappbare Möglichkeit, die Rezepte nach Belieben zu filtern. Entweder nach Suchbegriffen oder nach verschiedenen Kategorien, die auf dem Prototypen in einer Auswahl dargestellt sind.
-
+Rechts oben befindet sich der Menüpunkt der zum persönlichen Kochbuch bzw. Login führt.\\
+Auf der linken Seite gibt es die Möglichkeit, die Rezepte nach Belieben zu filtern. Entweder nach Suchbegriffen oder nach verschiedenen Kategorien, die auf dem Prototypen in einer Auswahl dargestellt sind.
+\newpage
 Rezeptseite:
 \begin{center}
 \includegraphics[scale=0.4]{Prototyp/plätzchenrezeptseite.png}
 \end{center}
 
-Eine Rezeptseite enthält Bild, Zutaten, Zubereitung und Kommentare zu einem Rezept. In dem Bereich auf der rechten Seite befindet sich der Button um das Rezept zu speichern. Ist man nicht eingeloggt, wird dazu zuerst aufgefordert, wenn der Button betätigt wird.
-Außerdem sind dort Informationen zum Aufwand des Rezepts, den Kategorien, denen es zugeordnet ist und Ähnliches.
-
+Eine Rezeptseite enthält ein Bild, Zutaten, Zubereitung und Kommentare zu einem Rezept. In dem Bereich auf der rechten Seite befindet sich der Button, um das Rezept zu speichern. Ist man nicht eingeloggt, wird man aufgefordert, sich einzuloggen. 
+Außerdem befinden sich auf der Seite Informationen zum Aufwand des Gerichtes und die Kategorie, in der es sich befindet. 
+\newpage
 % ------------------------------------------------------------------------------------
 \section*{Funktionalität der Navigation}
 
@@ -65,7 +65,7 @@ Einklappen der Seitennavigation:
 \includegraphics[scale=0.4]{Prototyp/home_menuhidden.png}
 \end{center}
 
-Die Seitennavigation kann einfach ein- und ausgeklappt werden.
+Die Seitennavigation kann durch Betätigung des Pfeiles auf der linken Seite ein- bzw. ausgeklappt werden. 
 
 horizontales Menü: meine Rezepte
 \begin{center}
@@ -73,7 +73,7 @@ horizontales Menü: meine Rezepte
 \end{center}
 
 
-Die einzelnen Menüpunkte sind aufklappbar:
+Die einzelnen Menüpunkte sind durch Anklicken des Pfeiles aufklappbar:
 
 Menü: Kochen
 \begin{center}
@@ -84,7 +84,7 @@ Menü: Backen
 \begin{center}
 \includegraphics[scale=0.4]{Prototyp/menu_backen.png}
 \end{center}
-
+\newpage
 Menü: Zutat
 \begin{center}
 \includegraphics[scale=0.4]{Prototyp/menu_zutat.png}
@@ -93,7 +93,7 @@ Menü: Zutat
 
 \pagebreak
 % ------------------------------------------------------------------------------------
-\section*{Die 3 Szenarien}
+\section*{Szenarien}
 
 \subsection*{Szenario 1: Max will Plätzchen backen}
 
@@ -102,7 +102,7 @@ Er verwendet die Suchfunktion, gibt "Plätzchen" ein und erhält Plätzchenrezep
 \includegraphics[scale=0.4]{Prototyp/plätzchensuche.png}
 \end{center}
 
-Er wählt eines aus und wird auf die entsprechende Rezeptseite gebracht.
+Er wählt ein Rezept aus und wird auf die entsprechende Rezeptseite gebracht.
 \begin{center}
 \includegraphics[scale=0.4]{Prototyp/plätzchenrezeptseite.png}
 \end{center}
@@ -121,8 +121,9 @@ Er wählt im Seitenmenü "Zutat" aus...
 \includegraphics[scale=0.4]{Prototyp/menu_zutat_nudelnhackfleisch.png}\\[1em]
 \includegraphics[scale=0.4]{Prototyp/menu_zutat_nudelnhackfleischtomate.png}
 \end{center}
+Er bekommt eine Auswahl von Rezepten, die zu seinen Zutaten passen.
 
-
+\newpage
 \subsection*{Szenario 3: Anna lässt sich inspirieren}
 
 Anna klappt das Seitenmenü ein, um auf der gesamten Breite die Bilder der Rezepte betrachten zu können.
