--- a/Aufgabe2_Navigationsstruktur/Dokumentation.tex
+++ b/Aufgabe2_Navigationsstruktur/Dokumentation.tex
@@ -53,7 +53,7 @@ Zudem wird es einen persönlichen Bereich mit einer Login-Funktion geben, in der
 Home | Kochen | Backen | meine Rezepte
 
 Der Bereich 'Techniken' ist in alle Rezept-Unterseiten integriert, also kein eigenständiger Navigationsbereich.
-
+\newpage
 \textbf{Schema zur Organisation der Begriffe:}\\
 Hierarchische Struktur
 
